use jlink plugin